# Without this configuration, the workspace will be read from `rust-runtime`, causing the build to fail.
[workspace]
resolver = "2"
members = [
    "pokemon-service",
    "pokemon-service-client-usage",
    "pokemon-service-common",
    "pokemon-service-lambda",
    "pokemon-service-tls"
]

[profile.release]
lto = true
